[workspace]
members = ["programs/*", "commons"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", branch = "master" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", branch = "master" }
anchor-client = { git = "https://github.com/coral-xyz/anchor.git", branch = "master" }
clap = "4.5.31"
anyhow = "1.0.97"
shellexpand = "3.1.0"
rust_decimal = "1.36.0"
spl-associated-token-account = "6.0.0"
mpl-token-metadata = "5.1.0"
rand = "0.9.0"
tokio = "1.44.0"
serde_json = "1.0.48"
serde = "1.0.104"
solana-transaction-status = "2.1.1"
env_logger = "0.11.6"
log = "0.4.17"
bs58 = "0.5.1"
chrono = "0.4.31"
hyper = "0.14.17"
routerify = "3"
ureq = "3.0.8"
bincode = "2.0.0"
commons = { path = "./commons" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
