[workspace]
members = ["commons", "dlmm_interface"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
anchor-client = "0.31.1"
solana-sdk = "2.2.0"
solana-program = "2.2.0"
spl-associated-token-account = "7.0.0"
solana-transaction-status = "2.2.0"
solana-account-decoder = "2.2.0"
spl-memo = "6.0.0"
spl-transfer-hook-interface = "0.10.0"
serde_json = "1.0.140"
serde = "1.0.219"
bincode = "1.3.3"
bs58 = "0.5.1"
bytemuck = "1.13.1"
clap = "4.5.41"
shellexpand = "3.1.0"
env_logger = "0.11.8"
log = "0.4.27"
rust_decimal = "1.37.2"
ruint = "1.15.0"
num-integer = "0.1.46"
num-traits = "0.2.19"
hyper = "1.6.0"
routerify = "3"
tokio = "1.46.1"
anyhow = "1.0.71"
rand = "0.9.1"
chrono = "0.4.41"
ureq = "3.0.12"
itertools = "0.14.0"
commons = { path = "./commons" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
