[package]
name = "dlmm_interface"
version = "0.9.0"
edition = "2021"

[features]
staging = []

[dependencies.borsh]
version = "^1.5"

[dependencies.bytemuck]
features = ["derive", "min_const_generics"]
workspace = true

[dependencies.num-derive]
version = "0.4.2"

[dependencies.num-traits]
version = "^0.2"

[dependencies.serde]
optional = true
workspace = true

[dependencies.solana-program]
workspace = true

[dependencies.thiserror]
version = "2.0.12"

[dependencies.serde_arrays]
version = "0.2.0"
