[package]
name = "lb_clmm"
version = "0.8.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lb_clmm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
localnet = []
test-bpf = []
staging = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", branch = "master", features = [
    "event-cpi",
] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", branch = "master" }
uint = "0.10.0"
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
ruint = "1.3.0"
num-traits = "0.2.16"
num-integer = "0.1.45"
mpl-token-metadata = "5.1.0"
solana-program = "2.2.1"
num_enum = "0.7.1"
borsh = "*"

[dev-dependencies]
proptest = "1.2.0"
rand = "0.9.0"
solana-program-test = "2.2.1"
solana-sdk = "2.2.1"
async-trait = "0.1.52"
assert_matches = "1.5.0"
spl-associated-token-account = "6.0.0"
commons = { path = "../../commons" }
bincode = "2.0.0"
